# fwupd

./: RELEASE  meson.build
contrib/: PKGBUILD  fwupd.spec.in
contrib/ci/: dependencies.xml
contrib/debian/: fwupd-doc.install
data/: org.freedesktop.fwupd.metainfo.xml
docs/: meson.build
libfwupd/: fwupd-client.c  fwupd-common.c  fwupd-remote.c  meson.build
libfwupdplugin/: fu-common.c  fu-context.c  fu-device-locker.c  fu-device.c  fu-device.h  fu-hwids.c  fu-smbios.c  fu-srec-firmware.c  fu-udev-device.c  fwupdplugin.h  meson.build
plugins/acpi-phat/: fu-acpi-phat-health-record.c
plugins/rts54hub/: fu-rts54hub-rtd21xx-background.c  fu-rts54hub-rtd21xx-foreground.c
plugins/uefi-dbx/: fu-plugin-uefi-dbx.c
